--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=SpringMVC
-spring.datasource.url=
+spring.datasource.url=jdbc:h2:file:/Users/HP/Downloads/week2/db
 spring.h2.console.enabled=true
 spring.datasource.username=user
 spring.datasource.password=password
